--- a/index.html
+++ b/index.html
@@ -1,81 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!doctype html>
+<html lang="eng">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Designing For Recognition</title>
-    <link rel="stylesheet" href="styles/styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Design for Recognition - voorbeeld</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-    <header>
-        <img src="assets/Mijnlogo.svg" alt="Logo">
-        <img src="assets/hamburg-menu.jpg" alt="Menu">
-    </header>
+  <header class="site-header">
+    <div class="brand">
+      <div class="logo">Designing<br>For<br>Recognition</div>
+    </div>
+  </header>
 
-    <h1>This is Designing For Recognition</h1>
-    <p class="intro-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
-
-        <h2>All our projects</h2>
-
-    <section class="project-grid">
-        <article class="project-tile">
-            <img src="assets/handhaver.jpg" alt="3handhavers">
-            <h3>Chat with the enforcement officer</h3>
-            <a href="/">Read more about this project</a>
-        </article>
-
-        <article class="project-tile">
-            <img src="assets/statics.jpg" alt="statics">
-            <h3>Share open statistics</h3>
-            <a href="/">Read more about this project</a>
-        </article>
-
-        <article class="project-tile">
-            <img src="assets/signaal.jpg" alt="signalsymbol">
-            <h3>Signal when taking photos</h3>
-            <a href="/">Read more about this project</a>
-        </article>
-
-        <article class="project-tile">
-            <img src="assets/scanauto.jpg" alt="parkeerauto">
-            <h3>Camera box with shape and direction</h3>
-            <a href="/">Read more about this project</a>
-        </article>
-
-        <article class="project-tile">
-            <img src="assets/digitalhuman.jpg" alt="digitalhuman">
-            <h3>Model for the digital public space</h3>
-            <button>Read more about this project</button>
-        </article>
-
-        <article class="project-tile">
-            <img src="assets/amsterdam.jpg" alt="keizergracht">
-            <h3>Take to the streets!</h3>
-            <a href="/">Read more about this project</a>
-        </article>
-
-        <article class="project-tile">
-            <img src="assets/valuecards.jpg.jpg" alt="valuecard">
-            <h3>Value cards</h3>
-            <a href="/">Read more about this project</a>
-        </article>
-
-        <article class="project-tile">
-            <img src="assets/humanscale.jpg" alt="humanscale">
-            <h3>Determining human scale</h3>
-            <a href="/">Read more about this project</a>
-        </article>
-
+  <main class="page">
+    <section class="intro">
+      <p>
+        Designing for Recognition onderzoekt hoe we beeldherkenning en digitale technologie in de stad menselijker en transparanter kunnen maken.
+        Met ontwerpen, experimenten en gesprekken maken we zichtbaar wat technologie doet en betrekken we bewoners actief bij het vormgeven van hun digitale omgeving.
+        Zo bouwen we aan een stad waarin openheid, vertrouwen en de menselijke maat centraal staan.
+      </p>
     </section>
 
+    <section class="illustration">
+      <img src="assets/img/#2.png" alt="parkeerapp" />
+      <button class="cta">Leer meer!</button>
+    </section>
 
+    <section class="illustration large">
+      <img src="assets/#4.png" alt="parkeerautosensor" />
+      <button class="cta">Leer meer!</button>
+    </section>
+
+    <section class="illustration">
+      <img src="assets/#6.jpg" alt="" />
+      <button class="cta">Leer meer!</button>
+    </section>
+
+    <section class="photo-block">
+      <img src="assets/#7_2.png"voorbeeld foto" />
+      <button class="cta">Leer meer!</button>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+
+  </footer>
 </body>
-
 </html>
