--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
     </section>
 
     <section class="illustration">
-      <img src="assets/img/#2.png" alt="parkeerapp" />
+      <img src="./assets/#2.png" alt="parkeerapp" />
       <button class="cta">Leer meer!</button>
     </section>
 
     <section class="illustration large">
-      <img src="assets/#4.png" alt="parkeerautosensor" />
+      <img src="./assets/#4.png" alt="parkeerautosensor" />
       <button class="cta">Leer meer!</button>
     </section>
 
     <section class="illustration">
-      <img src="assets/#6.jpg" alt="" />
+      <img src="./assets/#6.jpg" alt="" />
       <button class="cta">Leer meer!</button>
     </section>
 
     <section class="photo-block">
-      <img src="assets/#7_2.png"voorbeeld foto" />
+      <img src="./assets/#7_2.png"voorbeeld foto" />
       <button class="cta">Leer meer!</button>
     </section>
   </main>
