--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="eng">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="brand">
-      <div class="logo">Designing<br>For<br>Recognition</div>
+      <div class="logo-gradient">Designing<br>For<br>Recognition</div>
     </div>
   </header>
 
@@ -23,22 +23,22 @@
     </section>
 
     <section class="illustration">
-      <img src="./assets/#2.png" alt="parkeerapp" />
+      <img src="./assets/2.png" alt="parkeerapp" />
       <button class="cta">Leer meer!</button>
     </section>
 
     <section class="illustration large">
-      <img src="./assets/#4.png" alt="parkeerautosensor" />
+      <img src="./assets/4.png" alt="parkeerautosensor" />
       <button class="cta">Leer meer!</button>
     </section>
 
     <section class="illustration">
-      <img src="./assets/#6.jpg" alt="" />
+      <img src="./assets/6.jpg" alt="" />
       <button class="cta">Leer meer!</button>
     </section>
 
     <section class="photo-block">
-      <img src="./assets/#7_2.png"voorbeeld foto" />
+      <img src="./assets/7nieuw.png"voorbeeld foto" />
       <button class="cta">Leer meer!</button>
     </section>
   </main>
